force-app/main/default/objects/OrderItem/fields/Accesorios__c.field-meta.xml
<CustomField>
    <fullName>Accesorios__c</fullName>
    <label>Accesorios</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>