force-app/main/default/objects/OrderItem/fields/Avaluado_por__c.field-meta.xml
<CustomField>
    <fullName>Avaluado_por__c</fullName>
    <label>Avaluado por</label>
    <length>255</length>
    <type>Text</type>
</CustomField>