force-app/main/default/objects/OrderItem/fields/Avaluo__c.field-meta.xml
<CustomField>
    <fullName>Avaluo__c</fullName>
    <label>Avalúo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>