force-app/main/default/objects/OrderItem/fields/Caja__c.field-meta.xml
<CustomField>
    <fullName>Caja__c</fullName>
    <label>Caja</label>
    <length>255</length>
    <type>Text</type>
</CustomField>