force-app/main/default/objects/OrderItem/fields/Cheque_posfechado_avalado__c.field-meta.xml
<CustomField>
    <fullName>Cheque_posfechado_avalado__c</fullName>
    <label>Cheque posfechado avalado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>