force-app/main/default/objects/OrderItem/fields/Definici_n_de_aprobaciones__c.field-meta.xml
<CustomField>
    <fullName>Definici_n_de_aprobaciones__c</fullName>
    <label>Definición de aprobaciones</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No necesita</fullName>
                <color>#FFFFFF</color>
                <label>No necesita</label>
            </value>
            <value>
                <fullName>Aprobado</fullName>
                <color>#FFFFFF</color>
                <label>Aprobado</label>
            </value>
            <value>
                <fullName>Lista de precios gerencial</fullName>
                <color>#FFFFFF</color>
                <label>Lista de precios gerencial</label>
            </value>
            <value>
                <fullName>Hasta 10% LP gerencial</fullName>
                <color>#FFFFFF</color>
                <label>Hasta 10% LP gerencial</label>
            </value>
            <value>
                <fullName>Mayor al 10% sobre precio de lista</fullName>
                <color>#FFFFFF</color>
                <label>Mayor al 10% sobre precio de lista</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>