force-app/main/default/objects/OrderItem/fields/DescAuto__c.field-meta.xml
<CustomField>
    <fullName>DescAuto__c</fullName>
    <label>Desc.%.Auto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>