force-app/main/default/objects/OrderItem/fields/Descuentos_y_Obsequios__c.field-meta.xml
<CustomField>
    <fullName>Descuentos_y_Obsequios__c</fullName>
    <label>Descuentos y Obsequios</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Descuento 1</fullName>
                <color>#FFFFFF</color>
                <label>Descuento 1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>