force-app/main/default/objects/OrderItem/fields/Impoconsumo__c.field-meta.xml
<CustomField>
    <fullName>Impoconsumo__c</fullName>
    <label>Impoconsumo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>