force-app/main/default/objects/OrderItem/fields/Iva__c.field-meta.xml
<CustomField>
    <fullName>Iva__c</fullName>
    <label>Iva</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>