force-app/main/default/objects/OrderItem/fields/Precio_con_impuesto__c.field-meta.xml
<CustomField>
    <fullName>Precio_con_impuesto__c</fullName>
    <formula>Iva__c+ Impoconsumo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio con impuesto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>