force-app/main/default/objects/OrderItem/fields/Tipo_Carrocera__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Carrocera__c</fullName>
    <label>Tipo Carrocería</label>
    <length>255</length>
    <type>Text</type>
</CustomField>