force-app/main/default/objects/OrderItem/fields/Total_a_Pagar__c.field-meta.xml
<CustomField>
    <fullName>Total_a_Pagar__c</fullName>
    <formula>Precio_con_impuesto__c+ Value(Text(Valor_soat__c))+ Casco__c+ Accesorios__c+ Valor_matrcula__c+ Valor_seguro_robo__c+ Descuento_aplicado_antes_de_impuesto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total a Pagar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>