force-app/main/default/objects/OrderItem/fields/Valor_cuota_inicial__c.field-meta.xml
<CustomField>
    <fullName>Valor_cuota_inicial__c</fullName>
    <label>Valor cuota inicial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>