force-app/main/default/objects/OrderItem/fields/Valor_de_descuento__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_descuento__c</fullName>
    <label>Valor de descuento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>