force-app/main/default/objects/OrderItem/fields/Valor_matrcula__c.field-meta.xml
<CustomField>
    <fullName>Valor_matrcula__c</fullName>
    <label>Valor matrí­cula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>