force-app/main/default/objects/OrderItem/fields/Valor_soat2__c.field-meta.xml
<CustomField>
    <fullName>Valor_soat2__c</fullName>
    <label>Valor soat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>