force-app/main/default/objects/OrderItem/fields/Valor_soat__c.field-meta.xml
<CustomField>
    <fullName>Valor_soat__c</fullName>
    <label>Valor soat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
                <color>#FFFFFF</color>
                <label>NA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>